[package]
name = "snowflakes"
version = "0.1.0"
edition = "2018"
description = "Framed io above Noise Protocol"
authors = ["Donough Liu <ldm2993593805@163.com>"]
categories = ["network-programming"]
license-file = "LICENSE"
readme = "README.md"
keywords = ["network", "noise", "protocol", "crypto"]
homepage = "https://github.com/ldm0/snowflakes"
documentation = "https://docs.rs/snowflakes"
repository = "https://github.com/ldm0/snowflakes"

[dependencies]
bytes = "1.1"
futures = "0.3"
pin-project-lite = "0.2"
snow = "0.8"
tokio = "1"
tokio-util = { version = "0.6", features = ["codec"] }

[dev-dependencies]
anyhow = "1.0"
clap = { version = "3.0.0-rc.7", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
snow = { version = "0.8", features = ["ring-accelerated"], default-features = false }
rand = "0.8.4"
