[package]
name = "snowflakes"
version = "0.1.2"
edition = "2018"
description = "Framed io above Noise Protocol"
authors = ["Donough Liu <ldm2993593805@163.com>"]
categories = ["network-programming"]
license-file = "LICENSE"
readme = "README.md"
keywords = ["network", "noise", "protocol", "crypto"]
homepage = "https://github.com/ldm0/snowflakes"
documentation = "https://docs.rs/snowflakes"
repository = "https://github.com/ldm0/snowflakes"

[dependencies]
bytes = "1.2"
futures = "0.3"
pin-project-lite = "0.2"
snow = { version = "0.9", features = ["ring-accelerated"], default-features = false }
tokio = { version = "1", default-features = false }
tokio-util = { version = "0.7", default-features = false, features = ["codec"] }

[dev-dependencies]
anyhow = "1"
clap = { version = "3.2", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
snow = { version = "0.9", features = ["ring-accelerated"], default-features = false }
rand = "0.8"
